# HeadPoseDetectionNoOCV

./: CMakeLists.txt  LICENSE  README.md  main.cpp  pose.hpp
pixle_tracker/: CMakeLists.txt  main.cpp  pixel_kalman_tracker.hpp
